package com.example.notionclone.domain.document.entity;

public enum ViewType {
    PAGE,
    TABLE,
    GALLERY
} 