package com.example.notionclone.domain.notification.entity;

public enum NotificationType {
    INVITE, COMMENT, MENTION, SYSTEM
} 