classDiagram
direction BT
class BaseEntity {
    String  createdBy
    String  updatedBy
    LocalDateTime  createdAt
    LocalDateTime  updatedAt
}
class Document {
    Long  id
    String  title
    String  content
    Integer  sortOrder
    boolean  isTrashed
    Integer  titleColumnWidth
    ViewType  viewType
}
class DocumentProperty {
    Long  id
    String  name
    PropertyType  type
    Integer  sortOrder
    Integer  width
}
class DocumentPropertyTagOption {
    Long  id
    String  label
    String  color
    Integer  sortOrder
}
class DocumentPropertyValue {
    Long  id
    String  value
}
class DocumentVersion {
    Long  id
    String  title
    ViewType  viewType
    Integer  titleColumnWidth
    String  content
    String  propertiesJson
    String  propertyValuesJson
    String  snapshotHash
}
class Notification {
    Long  id
    NotificationType  type
    String  message
    String  payload
    NotificationStatus  status
}
class Permission {
    Long  id
    PermissionType  permissionType
    PermissionStatus  status
}

class WorkspacePermission {
    Long  id
    WorkspaceRole  role
    Long  invitedBy
    LocalDateTime  joinedAt
    Boolean  isActive
}

class WorkspaceRole {
    <<enumeration>>
    OWNER
    ADMIN
    EDITOR
    VIEWER
    GUEST
}
class User {
    Long  id
    String  email
    String  password
    String  name
    String  profileImageUrl
}
class Workspace {
    Long  id
    String  name
}
class ViewType {
    <<enumeration>>
    PAGE
    TABLE
    GALLERY
}
class PropertyType {
    <<enumeration>>
    TEXT
    NUMBER
    TAG
    DATE
    CREATED_BY
    LAST_UPDATED_BY
    CREATED_AT
    LAST_UPDATED_AT
}
class PermissionType {
    <<enumeration>>
    READ
    WRITE
    OWNER
}
class PermissionStatus {
    <<enumeration>>
    PENDING
    ACCEPTED
    REJECTED
}
class NotificationType {
    <<enumeration>>
    INVITE
    COMMENT
    MENTION
    SYSTEM
}
class NotificationStatus {
    <<enumeration>>
    UNREAD
    READ
    ACCEPTED
    REJECTED
}

BaseEntity  --|>  Document 
BaseEntity  --|>  DocumentProperty 
BaseEntity  --|>  DocumentPropertyTagOption 
BaseEntity  --|>  DocumentPropertyValue 
BaseEntity  --|>  DocumentVersion 
BaseEntity  --|>  Notification 
BaseEntity  --|>  Permission 
BaseEntity  --|>  WorkspacePermission 
BaseEntity  --|>  User 
BaseEntity  --|>  Workspace 

Document "0..*" --> "0..1" User 
Document "0..*" <--> "0..1" Workspace 
Document "0..*" --> "0..1" Document 
Document "0..*" --> "0..1" ViewType 
DocumentProperty "0..*" --> "0..1" Document 
DocumentProperty "0..*" --> "0..1" PropertyType 
DocumentPropertyTagOption "0..*" --> "0..1" DocumentProperty 
DocumentPropertyValue "0..*" --> "0..1" Document 
DocumentPropertyValue "0..*" --> "0..1" DocumentProperty 
DocumentVersion "0..*" --> "0..1" Document 
DocumentVersion "0..*" --> "0..1" Workspace 
DocumentVersion "0..*" --> "0..1" ViewType 
Notification "0..*" --> "0..1" User 
Notification "0..*" --> "0..1" NotificationType 
Notification "0..*" --> "0..1" NotificationStatus 
Permission "0..*" --> "0..1" Document 
Permission "0..*" --> "0..1" User 
Permission "0..*" --> "0..1" PermissionType 
Permission "0..*" --> "0..1" PermissionStatus 
WorkspacePermission "0..*" --> "0..1" User 
WorkspacePermission "0..*" --> "0..1" Workspace 
WorkspacePermission "0..*" --> "0..1" WorkspaceRole 
Workspace "0..*" --> "0..1" User 
Workspace "0..1" <--> "0..*" Workspace 
